Fix collapsed flexbox column on IE11

--- a/client/src/components/petdetails/petdetails.css
+++ b/client/src/components/petdetails/petdetails.css
@@ -8,6 +8,7 @@
 
 .pet-details-grid {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
 }
 
